EN-3617: Update Koreapi to use a proper library for CSV serialization and escaping
* Add .csv extension on to file.
* Clean up of serialization code.
* Use open csv writer library
* Replace new lines with spaces in metric names

--- a/koreapi.default.properties
+++ b/koreapi.default.properties
@@ -1,5 +1,5 @@
 environment = development
-core.server.host = 127.0.0.1
+core.server.host = localhost
 core.server.port = 8081
-metric-config.balboa.server.host = 127.0.0.1
+metric-config.balboa.server.host = localhost
 metric-config.balboa.server.port = 2012
