--- a/koreapi.default.properties
+++ b/koreapi.default.properties
@@ -1,5 +1,5 @@
-environment = development
-core.server.host = 127.0.0.1
+environment = production
+core.server.host = eol03
 core.server.port = 8081
-metric-config.balboa.server.host = 127.0.0.1
+metric-config.balboa.server.host = eol03
 metric-config.balboa.server.port = 2012
