--- a/koreapi.default.properties
+++ b/koreapi.default.properties
@@ -1,5 +1,5 @@
-environment = production
-core.server.host = eol03
+environment = development
+core.server.host = localhost
 core.server.port = 8081
-metric-config.balboa.server.host = eol03
+metric-config.balboa.server.host = localhost
 metric-config.balboa.server.port = 2012
